[gd_scene load_steps=9 format=3 uid="uid://bwpn33vrmot3m"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_c4g3p"]
[ext_resource type="Texture2D" uid="uid://cjmg53jpri5rl" path="res://graphics/player/player.png" id="1_we46q"]
[ext_resource type="Texture2D" uid="uid://bl4qwufmcn15g" path="res://graphics/decals/white.png" id="3_cijgd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ccg7d"]
radius = 63.0079

[sub_resource type="Gradient" id="Gradient_v1c5l"]
colors = PackedColorArray(0.222424, 1, 0.94921, 1, 0.345, 0.71625, 0.75, 0.313726)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_08uvi"]
gradient = SubResource("Gradient_v1c5l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lwbee"]
emission_shape = 1
emission_sphere_radius = 11.71
particle_flag_disable_z = true
spread = 15.88
gravity = Vector3(0, 0, 0)
initial_velocity_min = 705.89
initial_velocity_max = 882.36
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.0
scale_max = 0.3
color = Color(0.14902, 0.858824, 0.819608, 0.694118)
color_ramp = SubResource("GradientTexture1D_08uvi")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_eqxlp"]
polygon = PackedVector2Array(-36, -44, -28, -45, -24, -49, -11, -58, 6, -59, 26, -60, 47, -41, 51, -26, 67, -25, 79, -11, 89, -10, 97, -3, 111, -2, 124, 3, 132, 8, 135, 20, 130, 35, 122, 32, 110, 37, 97, 46, 94, 51, 66, 51, 64, 41, 47, 40, 18, 49, 13, 54, -12, 61, -31, 53, -36, 42, -49, 22, -54, 6, -56, -23, -48, -35)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_c4g3p")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(39, 1)
rotation = 1.5708
texture = ExtResource("1_we46q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ccg7d")

[node name="TimerLaser" type="Timer" parent="."]

[node name="TimerGrenade" type="Timer" parent="."]

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(10, -128)

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(126, 148)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 154)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(124, 141)

[node name="GrenadeStartPositions2" type="Node2D" parent="."]
position = Vector2(39, -89)

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPositions2"]
position = Vector2(61, 124)

[node name="Marker2D2" type="Marker2D" parent="GrenadeStartPositions2"]
position = Vector2(65, 117)

[node name="Marker2D3" type="Marker2D" parent="GrenadeStartPositions2"]
position = Vector2(63, 108)

[node name="LaserParticles" type="GPUParticles2D" parent="."]
position = Vector2(137, 20)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_lwbee")
texture = ExtResource("3_cijgd")
lifetime = 0.5
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_eqxlp")

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
